Feat: Add translations

--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -1,7 +1,15 @@
 {
     "@@locale": "es",
+    "homeAppBarTitle": "Google IO EXTENDED 2023",
+    "@homeAppBarTitle": {
+        "description": "Texto mostrado en la AppBar de la página del Home"
+    },
     "counterAppBarTitle": "Contador",
     "@counterAppBarTitle": {
         "description": "Texto mostrado en la AppBar de la página del contador"
+    },
+    "gmailAppBarTitle": "Gmail UI",
+    "@gmailAppBarTitle": {
+        "description": "Texto mostrado en la AppBar de la página de GMAIL UI"
     }
 }
