--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -1,7 +1,15 @@
 {
     "@@locale": "en",
+    "homeAppBarTitle": "Google IO EXTENDED 2023",
+    "@homeAppBarTitle": {
+        "description": "Text shown in the AppBar of the Home Page"
+    },
     "counterAppBarTitle": "Counter",
     "@counterAppBarTitle": {
         "description": "Text shown in the AppBar of the Counter Page"
+    },
+    "gmailAppBarTitle": "Gmail UI",
+    "@gmailAppBarTitle": {
+        "description": "Text shown in the AppBar of the Gmail UI Page"
     }
 }
